data processing deleted

--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,4 @@ data_processing.ipynb
 chroma/20eaca03-b292-456a-b68d-029024f5abe0/length.bin
 chroma/20eaca03-b292-456a-b68d-029024f5abe0/header.bin
 chroma/20eaca03-b292-456a-b68d-029024f5abe0/data_level0.bin
-data_processing.ipynb
-data_processing.ipynb
+data_processing copy.ipynb
